Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27103

Android deployment fails if the kit ABI is not known for some reason

XMLWordPrintable

    • c1512dce87 (qt-creator/qt-creator/7.0) c1512dce87 (qt-creator/qt-creator/master) c1512dce87 (qt-creator/tqtc-qt-creator/7.0) c1512dce87 (qt-creator/tqtc-qt-creator/master) c1512dce87 (qt-creator/tqtc-qt-creator/qds-3.1), e6875aa01 (master)
    • 2023wk20FOQtforAndroid

      The deployment might fail sometimes if the kit's ABIs list is not known:

      The kit supports "", but the device uses "arm64-v8a, armeabi-v7a, armeabi".

      This probably underlines a deeper issue because the kit's ABIs list should be valid if the kit is valid. However, it might be reasonable to go forward with the deployment if this case is hit and fail later to install if the ABIs don't match.

        1. qc-device-uses-empty.png
          50 kB
          Rami Potinkara
        2. image-2022-06-03-10-40-10-750.png
          21 kB
          Victor Corchez
        3. SM-T865.png
          73 kB
          Frederik Seiffert
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            assam Assam Boudjelthia
            Votes:
            0 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes